update title meta tags

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{template.name}}</title>
+    <title>{{template.name}} | {{promo.hero.header}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{template.description}}">
 
-    <meta property="og:title" content="{{template.name}}" />
+    <meta property="og:title" content="{{template.name}} | {{promo.hero.header}}" />
   	<meta property="og:type" content="article" />
   	<meta property="og:url" content="https://www.vertex360.co/template/{{template.slug}}" />
   	<meta property="og:image" content="{{{template.image}}}=s512-c" />
