update pricing box features

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -225,16 +225,19 @@
                                         <span class="h6">Includes:</span>
                                         <ul class="list-unstyled" style="height:160px">
                                             <li>
-                                                Partial Tutorial Access
+                                                Hosting
                                             </li>
                                             <li>
-                                                Downloadable Videos
+                                                Custom Domain
                                             </li>
                                             <li>
-                                                Downloadable Code Samples
+                                                Blog
                                             </li>
                                             <li>
-                                                5 Project Maximum
+                                                Automatic SSL
+                                            </li>
+                                            <li>
+                                                Contact Form
                                             </li>
                                         </ul>
                                         <a id="btn-launch-30" href="#" class="btn btn-info mt-0 w-100 mb-4">LAUNCH YOUR SITE</a>
@@ -252,19 +255,19 @@
                                         <span class="h6">Includes:</span>
                                         <ul class="list-unstyled" style="height:160px">
                                             <li>
-                                                <em>FULL</em> Tutorial Access
+                                                Hosting
                                             </li>
                                             <li>
-                                                Downloadable Videos
+                                                Custom Domain
                                             </li>
                                             <li>
-                                                Downloadable Code Samples
+                                                Blog
                                             </li>
                                             <li>
-                                                <em>Unlimited</em> Projects
+                                                Automatic SSL
                                             </li>
                                             <li>
-                                                Vertex 360 Developer License
+                                                Contact Form
                                             </li>
                                         </ul>
                                         <a id="btn-launch-50" href="#" class="btn btn-success mt-0 w-100 mb-4">LAUNCH YOUR SITE</a>
