--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -418,12 +418,6 @@
   </div>
 </div>
 
-<a id="btn-register-modal" data-toggle="modal" data-target="#register-modal" href="#" style="display:none"></a>
-<a id="btn-purchase-modal" data-toggle="modal" data-target="#purchase-modal" href="#" style="display:none"></a>
-<a id="activate-pp-button" href="#" style="display:none"></a>
-<a id="btn-newsletter-modal" data-toggle="modal" data-target="#newsletter-modal" href="#" style="display:none">newsletter modal</a>
-
-
 <div class="modal fade" id="newsletter-modal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content" style="border-radius:4px;margin:auto">
@@ -434,15 +428,25 @@
         </button>
       </div>
       <div class="modal-body">
+        <img src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
+        <h2>Guide To Freelancing</h2>
 
 
       </div>
+      
       <div class="text-center mb-4" style="padding:1rem">
         <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
       </div>
     </div>
   </div>
 </div>
+
+
+<a id="btn-register-modal" data-toggle="modal" data-target="#register-modal" href="#" style="display:none"></a>
+<a id="btn-purchase-modal" data-toggle="modal" data-target="#purchase-modal" href="#" style="display:none"></a>
+<a id="activate-pp-button" href="#" style="display:none"></a>
+<a id="btn-newsletter-modal" data-toggle="modal" data-target="#newsletter-modal" href="#" style="display:none">newsletter modal</a>
+
 
     <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
     <script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
