--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -427,11 +427,10 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <img src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
-        <h2>Guide To Freelancing</h2>
-
-
+      <div class="modal-body text-center">
+        <img style="width:256px" src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
+        <h3 class="mt-2">Guide To Freelancing</h3>
+        <p>Looking to grow your freelancing business?</p>
       </div>
       
       <div class="text-center mb-4" style="padding:1rem">
