--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -429,7 +429,7 @@
       </div>
       <div class="modal-body text-center">
         <img style="width:256px" src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
-        <h3 class="mt-2">Guide To Freelancing</h3>
+        <h3 class="mt-2 mb-2">Guide To Freelancing</h3>
         <p>Looking to grow your freelancing business?</p>
       </div>
       
