--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -431,10 +431,14 @@
         <img style="width:256px" src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
         <h3 class="mt-2 mb-2">Guide To Freelancing</h3>
         <p>Looking to grow your freelancing business?</p>
+        <div style="display:flex">
+            <input style="flex:1" type="text" placeholder="Email" />
+            <button class="btn btn-primary">Submit</button>
+        </div>
       </div>
       
-      <div class="text-center mb-4" style="padding:1rem">
-        <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+      <div class="text-center mb-3" style="padding:0.75rem">
+        <img style="width:130px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s260" />
       </div>
     </div>
   </div>
