newsletter modal styling

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -431,14 +431,14 @@
         <img style="width:256px" src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
         <h3 class="mt-2 mb-2">Guide To Freelancing</h3>
         <p>Looking to grow your freelancing business? Join our weekly newsletter in which we send tips and tools for:</p>
-        <ul>
+        <ul style="width:65%;text-align:left;margin:auto">
             <li>Gaining more clients</li>
             <li>Creating inbound lead funnel</li>
             <li>Raising your rates</li>
             <li>Developing your brand</li>
             <li>More...</li>
         </ul>
-        <div style="display:flex">
+        <div class="mt-2" style="display:flex">
             <input style="flex:1;margin-right:12px;padding:4px;background:#f9f9f9;border:1px solid #ddd" type="text" placeholder="Email" />
             <button id="btn-join-newsletter" class="btn btn-primary">Submit</button>
         </div>
