--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -429,8 +429,8 @@
       </div>
       <div class="modal-body text-center">
         <img style="width:256px" src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
-        <h3 class="mt-2 mb-2">Guide To Freelancing</h3>
-        <p>Looking to grow your freelancing business? Join our weekly newsletter in which we send tips and tools for:</p>
+        <h3 class="mt-2 mb-1">Guide To Freelancing</h3>
+        <p class="mb-1">Looking to grow your freelancing business? Join our weekly newsletter in which we send tips and tools for:</p>
         <ul style="width:65%;text-align:left;margin:auto">
             <li>Gaining more clients</li>
             <li>Creating inbound lead funnel</li>
@@ -439,7 +439,7 @@
             <li>More...</li>
         </ul>
         <div class="mt-2" style="display:flex">
-            <input style="flex:1;margin-right:12px;padding:4px;background:#f9f9f9;border:1px solid #ddd" type="text" placeholder="Email" />
+            <input id="input-newsletter-email" style="flex:1;margin-right:12px;padding:4px;background:#f9f9f9;border:1px solid #ddd" type="text" placeholder="Email" />
             <button id="btn-join-newsletter" class="btn btn-primary">Submit</button>
         </div>
       </div>
@@ -716,7 +716,14 @@
 
             document.addEventListener('scroll', showModal)
             $('#btn-join-newsletter').click(function(){
-                console.log('JOIN NEWSLETTER')
+                var email = $('#input-newsletter-email').val()
+                if (email.length == 0){
+                    alert('Please enter your EMAIL')
+                    return
+                }
+
+                console.log('JOIN NEWSLETTER: ' + email)
+
             })
         })()
     </script>
