add another newsletter feature

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -436,6 +436,7 @@
             <li>Creating inbound lead funnel</li>
             <li>Raising your rates</li>
             <li>Developing your brand</li>
+            <li>Fresh job & gig leads</li>
             <li>More...</li>
         </ul>
         <div class="mt-2" style="display:flex">
