--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -421,13 +421,7 @@
 <div class="modal fade" id="newsletter-modal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content" style="border-radius:4px;margin:auto">
-      <div class="modal-header">
-        <h5 class="modal-title" id="registerModalLabel">Newsletter</h5>
-        <button id="btn-close-register" type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-center">
+      <div class="modal-body text-center pt-3">
         <img style="width:256px" src="https://lh3.googleusercontent.com/xpRDB2O-zBckoefp2tJ4_Pe7v0PBzPhAI5wgCKYQdjZfivyzpbMIGQ5eY0Xdx3vWctwNDzvqzHdbndglOKHpYPA=s512" />
         <h3 class="mt-2 mb-1">Guide To Freelancing</h3>
         <p class="mb-1">Looking to grow your freelancing business? Join our weekly newsletter in which we send tips and tools for:</p>
