--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -203,9 +203,9 @@
             <div class="container">
                 <div class="row justify-content-center text-center section-intro">
                     <div class="col-12 col-md-9 col-lg-8">
-                        <h2 class="display-4 font-oswald">Affordable Pricing</h2>
+                        <h2 class="display-4 font-oswald text-capitalize">Launch {{template.name}} With Hosting</h2>
                         <p class="lead">
-                            Launch Palette on your own account today and create a beautfiful portfolio website in under an hour!
+                            Launch {{template.name}} on your own account today and create a beautfiful portfolio website in under an hour!
                             Less than $5 per month for the a 1-year commitment.
                         </p>
                     </div>
