remove temporary medium directory, rename to views

--- a/views/admin/pages.mustache
+++ b/views/admin/pages.mustache
@@ -8,10 +8,6 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
   <style>
-    input {
-      box-shadow: none !important;
-    }
-
     textarea {
       box-shadow: none !important;
       background: #f9f9f9 !important;
@@ -43,9 +39,17 @@
     }
 
     input {
-      padding: 0px;
-      margin: 0px;
-      border: none;
+      box-shadow: none !important;
+      padding: 0px !important;
+      margin: 0px !important;
+      border: none !important;
+      line-height: 40px !important;
+      height: 40px !important;
+      background: #f9f9f9 !important;
+    }
+
+    td {
+      padding-right: 0px !important;
     }
   </style>
 </head>
