--- a/views/account.mustache
+++ b/views/account.mustache
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <head>
-  {{>head}}
+  <title>Vertex 360 | Powerful Website Builder. Easy, Fast, Professional.</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="google-signin-client_id" content="684486304077-s4rcr24i6209vpk0g4380saiqobalcma.apps.googleusercontent.com">
+
+  <link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
+  <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
+
   <style>
     .list-box-listing-img {
       max-width: 96px !important;
@@ -62,8 +69,8 @@
           <div class="header-widget hidden-xs hidden-sm">
             <nav id="navigation" class="style-1">
     					<ul id="responsive">
-                <li><a href="/">Home</a></li>
                 <li><a href="/templates">Templates</a></li>
+                <li><a href="/community">Community</a></li>
                 <li><a href="/blog">Blog</a></li>
   							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
     					</ul>
@@ -86,7 +93,7 @@
 			<ul data-submenu-title="Account">
 				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-user-following"></i> Profile</a></li>
 				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-docs"></i> Sites</a></li>
-        <li><a style="margin-left:4px" href="/account/logout"><i class="sl sl-icon-close"></i> Log Out</a></li>
+        <li><a id="link-logout" style="margin-left:4px" href="#"><i class="sl sl-icon-close"></i> Log Out</a></li>
         <li><a style="width:86%;border-radius:4px;margin-left:4px;background:#357d3e" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Site</a></li>
 			</ul>
 		</div>
@@ -99,6 +106,7 @@
 			<div class="col-lg-8 col-md-8">
         <div id="content-profile" class="dashboard-list-box margin-top-0">
           <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Your Site</a>
+          <a style="float:right;border-radius:4px;background:#354e7d;margin-top:16px;margin-right:16px" class="button" href="/profile/{{user.slug}}">View Your Profile</a>
 					<h4 class="gray">Profile Details</h4>
 					<div class="dashboard-list-box-static">
             <div class="row">
@@ -163,20 +171,22 @@
           <li>
             <div class="list-box-listing">
               <div class="list-box-listing-img">
-                <a target="_blank" href="https://www.vertex360.co/template/{{slug}}">
+                <a target="_blank" href="https://www.vertex360.co/site/{{slug}}">
                   <img src="{{image}}=s512-c" alt="Vertex 360 | {{name}}" />
                 </a>
               </div>
               <div class="list-box-listing-content">
-                <div class="inner">
-                  <h3><a target="_blank" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a></h3>
-                  <span>{{template.category}}</span>
+                <div class="inner" style="position:inherit;line-height:20px">
+                  <a target="_blank" style="margin-right:8px;font-size:20px" href="https://www.vertex360.co/site/{{slug}}">{{name}}</a>
+                  <a target="_blank" href="https://{{slug}}.vertex360.co"><i class="sl sl-icon-share-alt"></i></a>
+                  <br />
+                  <span style="text-transform:capitalize">{{category}}</span>
                 </div>
               </div>
             </div>
             <div class="buttons-to-right" style="bottom:0%;top:unset;opacity:1.0">
-              <a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> View Site</a>
-              <a href="/admin/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Manage</a>
+              <a href="/admin/{{slug}}" class="button"><i class="sl sl-icon-settings"></i> Settings</a>
+              <a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-equalizer"></i> Configuration</a>
             </div>
           </li>
           {{/sites}}
@@ -261,12 +271,29 @@
     <a href="#" id="btn-update-password" class="button fw margin-top-10">Reset Password</a>
   </div>
 </div>
-
+<div style="display:none" id="google-register"></div>
 </div>
 
+  <script>
+    function renderButton(){
+      // console.log('renderButton')
+      gapi.signin2.render('google-register', {
+        'scope': 'profile email',
+        'width': 265,
+        'height': 50,
+        'longtitle': true,
+        'onsuccess': function(){},
+        'onfailure': function(){}
+      });
+    }
+  </script>
+
   <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
   <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/turbo.min.js"></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/account.min.js"></script>
+
+
 </body>
 </html>
