--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -1,29 +1,10 @@
-<footer class="py-6 bg-light mt-5">
-		<div class="container">
-				<div class="row">
-						<div class="col-md-6 mx-auto text-center">
-								<ul class="list-inline">
-										<li class="list-inline-item"><a href="/">Home</a></li>
-										<li class="list-inline-item"><a href="/templates">Templates</a></li>
-										<li class="list-inline-item"><a href="/blog">Blog</a></li>
-								</ul>
-								<ul class="list-inline social social-dark social-sm">
-										<li class="list-inline-item">
-												<a href=""><i class="fa fa-facebook"></i></a>
-										</li>
-										<li class="list-inline-item">
-												<a target="_blank" href="https://twitter.com/Vertex3601"><i class="fa fa-twitter"></i></a>
-										</li>
-										<li class="list-inline-item">
-												<a target="_blank" href="https://www.youtube.com/channel/UCsJemLfEW2fMTw1y-IGbCdA/videos"><i class="fa fa-youtube"></i></a>
-										</li>
-								</ul>
-						</div>
-				</div>
-				<div class="row mt-5">
-						<div class="col-12 text-muted text-center small-xl">
-								&copy; 2019 Vertex 360 - All Rights Reserved
-						</div>
-				</div>
-		</div>
+<footer class="container bg-white border-top p-3 text-muted small d-flex">
+	<div style="flex:1">
+		<a href="/">
+			<img class="mr-3 mb-3" style="max-width:120px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+		</a>
+	</div>
+	<div style="padding-top:9px">
+		Copyright &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved.
+	</div>
 </footer>
