--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -1,28 +1,30 @@
-<!--navigation-->
-<nav style="height:72px;border-bottom:1px solid #ddd;padding:0px" class="navbar navbar-expand-md navbar-light bg-white fixed-top sticky-navigation">
-	<div class="container">
-		<a class="navbar-brand mx-auto" href="/">
-				<img class="logo" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
-		</a>
-		<button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
-						data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-				<span data-feather="grid"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav ml-auto" style="background:#fff">
-						<li class="nav-item">
-								<a class="nav-link" href="/">Home</a>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link" href="/templates">Templates</a>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link" href="/blog">Blog</a>
-						</li>
-						<li id="login-container" class="nav-item">
-								<a data-toggle="modal" data-target="#login-modal" style="border-radius:6px;color:#fff" class="nav-link btn btn-primary" href="#">Login</a>
-						</li>
-				</ul>
-		</div>
+<nav style="background-color:#333 !important" class="topnav navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<div class="container">
+	<a class="navbar-brand" href="/">
+		<img style="max-width:160px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s320" />
+	</a>
+	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="navbar-collapse collapse" id="navbarColor02">
+		<ul class="navbar-nav ml-auto d-flex align-items-center">
+			<li class="nav-item">
+				<a class="nav-link" href="/templates">Templates</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/community">Community</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://blog.vertex360.co">Blog</a>
+			</li>
+			<li class="nav-item" id="nav-login">
+				<a class="nav-link" href="#" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
+			</li>
+			<li class="nav-item highlight ml-4" id="login-container">
+				<a id="nav-register" style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
+			</li>
+		</ul>
 	</div>
+</div>
 </nav>
+<!-- End Navbar -->
