--- a/views/partials/scripts.mustache
+++ b/views/partials/scripts.mustache
@@ -1,76 +1,6 @@
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm" role="document">
-    <div class="modal-content" style="border-radius:4px">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <input id="input-login-email" style="background:#fffffa" class="form-control mb-4" type="text" placeholder="Email" />
-        <input id="input-login-password" style="background:#fffffa" class="form-control mb-4" type="password" placeholder="Password" />
-        <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg">Login</button>
-        <hr />
-      </div>
-      <div class="text-center" style="padding:1.5rem">
-        <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
-      </div>
-    </div>
-  </div>
-</div>
-
-<script>
-  var vertexLib = {
-    postRequest: function(url, params, completion){
-      $.ajax({
-        url: url,
-        type: 'POST',
-        data: params,
-        success: function(response){
-          if (response.confirmation != 'success'){
-            completion(response, null)
-            return
-          }
-
-          completion(null, response)
-        },
-        error: function(response){
-          completion(response, null)
-        }
-      })
-    },
-
-    getRequest: function(url, params, completion){
-      $.ajax({
-        url: url,
-        type: 'GET',
-        data: params,
-        success: function(response){
-          if (response.confirmation != 'success'){
-            completion(response, null)
-            return
-          }
-
-          completion(null, response)
-        },
-        error: function(response){
-          completion(response, null)
-        }
-      })
-    }
-  }
-
-  window.vertexLib = vertexLib
-</script>
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
-<script src="{{{cdn}}}/js/mustache.js"></script>
-<script src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
-<script src="{{{cdn}}}/snap/js/popper.min.js"></script>
-<script src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
-<script src="{{{cdn}}}/snap/js/feather.min.js"></script>
-<script src="{{{cdn}}}/snap/js/slick.min.js"></script>
-<script src="{{{cdn}}}/snap/js/scripts.js"></script>
-<script src="{{{cdn}}}/scripts/auth.js"></script>
-<script src="{{{cdn}}}/scripts/referrer.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/medium/js/vendor.min.js"></script>
+<script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+<script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
 {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
