--- a/views/template.mustache
+++ b/views/template.mustache
@@ -14,7 +14,7 @@
   	<meta property="og:image:height" content="260px" />
   	<meta property="og:description" content="{{template.preview}}" />
 
-    {{>styles}}
+    {{>head}}
     <style>
 			.logo {
 				width: 160px;
@@ -140,12 +140,12 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
-                <img style="max-width:100%" src="{{{template.image}}}=s750" />
+              <div class="modal-body text-center">
+                <img style="max-width:60%;" src="{{{template.image}}}=s750" />
                 <p class="text-center mt-4">To launch this template on your account and update its configuration with your content, enter the name of your site below.</p>
                 <hr />
               </div>
-              <div id="btn-launch-container" class="modal-footer pt-0">
+              <div id="btn-launch-container" style="border:none" class="modal-footer pt-0">
                 <input style="background:#fffffa" class="form-control" type="text" id="input-site-name" placeholder="Your Site Name" />
                 <button id="btn-launch-template" type="button" class="btn btn-primary">Launch!</button>
               </div>
@@ -157,8 +157,73 @@
         </div>
 
         {{>register}}
-        {{>footer}}
-        {{>scripts}}
+
+        <footer class="py-6 bg-dark mt-0">
+        		<div class="container">
+        				<div class="row">
+        						<div class="col-md-6 mx-auto text-center">
+        								<ul class="list-inline">
+        										<li class="list-inline-item"><a style="color:#fff" href="/">Home</a></li>
+        										<li class="list-inline-item"><a style="color:#fff" href="/templates">Templates</a></li>
+        										<li class="list-inline-item"><a style="color:#fff" href="/blog">Blog</a></li>
+        								</ul>
+        								<ul class="list-inline social social-dark social-sm">
+        										<li class="list-inline-item">
+        												<a style="background:#777" href="#"><i class="fa fa-facebook"></i></a>
+        										</li>
+        										<li class="list-inline-item">
+        												<a style="background:#777" target="_blank" href="https://twitter.com/Vertex3601"><i class="fa fa-twitter"></i></a>
+        										</li>
+        										<li class="list-inline-item">
+        												<a style="background:#777" target="_blank" href="https://www.youtube.com/channel/UCsJemLfEW2fMTw1y-IGbCdA/videos"><i class="fa fa-youtube"></i></a>
+        										</li>
+        								</ul>
+        						</div>
+        				</div>
+        				<div class="row mt-5">
+        						<div class="col-12 text-muted text-center small-xl">
+        								&copy; 2019 Vertex 360 - All Rights Reserved
+        						</div>
+        				</div>
+        		</div>
+        </footer>
+
+        <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content" style="border-radius:4px">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <input id="input-login-email" style="background:#fffffa" class="form-control mb-4" type="text" placeholder="Email" />
+                <input id="input-login-password" style="background:#fffffa" class="form-control mb-4" type="password" placeholder="Password" />
+                <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg">Login</button>
+                <hr />
+              </div>
+              <div class="text-center" style="padding:1.5rem">
+                <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+        <script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/snap/js/popper.min.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/snap/js/feather.min.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/snap/js/slick.min.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/snap/js/scripts.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
+        <script type="text/javascript" src="{{{cdn}}}/scripts/referrer.js"></script>
+        {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
+
+
         <script>
           (function(){
             // Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
@@ -193,7 +258,7 @@
                 }
 
                 // window.location.href = '/me?selected=sites' // redirect to account page
-                window.location.href = '/admin/'+siteSlug // redirect to site admin page
+                window.location.href = '/admin/pages/'+siteSlug // redirect to site admin page
               })
             }
 
