--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -24,7 +24,7 @@
   <div class="wrapper">
       <nav id="sidebar">
           <div class="sidebar-header">
-              <h5 style="color:#333">Features</h5>
+              <h5 style="color:#333">Search Templates</h5>
           </div>
           <ul class="list-unstyled components">
               <li class="active">
