--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -23,26 +23,13 @@
 
   <div class="wrapper">
       <nav id="sidebar">
-          <div class="sidebar-header">
+          <div class="sidebar-header mb-4">
               <h5 style="color:#333">Search Templates</h5>
+              <div>
+                <input type="text" class="pl-1" placeholder="ex: blog, portfolio..." />
+                <button class="btn btn-sm btn-primary ml-1">GO</button>
+              </div>
           </div>
-          <ul class="list-unstyled components">
-              <li class="active">
-                  <a href="#" class="sidebar-link" data-rel="all">All templates</a>
-              </li>
-              <li>
-                  <a href="#" class="sidebar-link" data-rel="influencer">Influencers</a>
-              </li>
-              <li>
-                  <a href="#" class="sidebar-link" data-rel="portfolio">Portfolio</a>
-              </li>
-              <li>
-                  <a href="#" class="sidebar-link" data-rel="resume">Resume</a>
-              </li>
-              <li>
-                  <a href="#" class="sidebar-link" data-rel="news">News</a>
-              </li>
-          </ul>
       </nav>
 
       <div id="content">
@@ -225,19 +212,6 @@
 
         launchTemplate()
       })
-
-      $('.sidebar-link').on('click', function(e){
-        e.preventDefault();
-        $(this).parent().addClass('active').siblings().removeClass('active');
-
-        var type = $(this).attr("data-rel");
-        $("#features").fadeTo(100, 0.1);
-        $("#features .container .row article").not("."+type).fadeOut();
-        setTimeout(function() {
-          $("."+type).fadeIn();
-          $("#features").fadeTo(300, 1);
-        }, 300);
-      });
     })()
   </script>
 
