--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -138,6 +138,14 @@
         }
 
         console.log('Search Templates: '+searchTerm)
+        window.vertexLib.postRequest('/admin/search', {text:searchTerm}, function(err, response){
+          if (err){
+            alert('Error - '+err.message)
+            return
+          }
+
+          console.log('SEARCH RESULTS: ' + JSON.stringify(response))
+        })
       })
 
       // checks if a template is ready when cloning:
