--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -149,7 +149,7 @@
         }
 
         console.log('Search Templates: '+searchTerm)
-        window.vertexLib.postRequest('/admin/search', {text:searchTerm}, function(err, response){
+        window.vertexLib.postRequest('/admin/search', {text:searchTerm, resource:'site'}, function(err, response){
           if (err){
             alert('Error - '+err.message)
             return
