--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -13,6 +13,7 @@
 		<div class="col-md-8">
       <div id="comments-header" class="d-none">
         <textarea id="text-area-comment" class="form-control mt-3 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
+        <small style="float:right" id="display-username"></small>
         <button id="btn-submit-comment" class="mb-3 btn btn-success">Add Comment</button>
       </div>
 
@@ -111,6 +112,7 @@
         if (user){
           $('#comments-header').removeClass('d-none')
           $('#register-or-login').addClass('d-none')
+          $('#display-username').html('Logged in as '+user.username)
         }
         else {
           $('#comments-header').addClass('d-none')
