misc button styling

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -12,9 +12,9 @@
 	<div class="row justify-content-between">
 		<div class="col-md-8">
       <div id="comments-header" class="d-none">
-        <textarea id="text-area-comment" class="form-control mt-3 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
-        <small class="text-muted float-right" id="display-username"></small>
-        <button id="btn-submit-comment" class="mb-3 btn btn-success">Add Comment</button>
+        <textarea id="text-area-comment" class="form-control mt-3 mb-0" rows="4" style="padding:0px 8px;resize:none"></textarea>
+        <small class="text-muted" id="display-username"></small>
+        <button id="btn-submit-comment" class="mb-3 btn btn-success float-right mt-2">Add Comment</button>
       </div>
 
       <div id="register-or-login" class="mt-4 mb-4 d-none" style="background:#f9f9f9;padding:16px">
