comment out console log

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -95,7 +95,7 @@
 
       window.addEventListener('message', function(event){
         var message = event.data
-        console.log('MESSAGE RECEIVED == ' + JSON.stringify(message))
+        // console.log('MESSAGE RECEIVED == ' + JSON.stringify(message))
         if (message.type == null)
           return
 
