console log test

--- a/views/widget/comments.mustache
+++ b/views/widget/comments.mustache
@@ -140,13 +140,16 @@
           site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
           profile: JSON.stringify({
             id: user.id,
-            firstName: user.firstName,
-            lastName: user.lastName,
+            // firstName: user.firstName,
+            // lastName: user.lastName,
             username: user.username,
             image: user.image,
             slug: user.slug
           })
         }
+
+        console.log('SUBMIT COMMENT: '+JSON.stringify(comment))
+        return
 
         window.vertexLib.postRequest('/api/comment', comment, function(err, resp){
           if (err){
